# proyecto_farmacetica_0.0.1

./: .gitignore  .main.py.kate-swp  Dockerfile  README.md  cliente.py  data.json  database.py  datos.py  docker-compose.yml  index.html  main.py  mi-app.service  migrate.py  models.py  nfpm.yaml  pyproject.toml  requirements.txt  schemas.py  scrip_cop.sh
