[project]
name = "proyecto-farmacetica-0-0-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pyjwt>=2.11.0",
    "sqlalchemy>=2.0.47",
    "uvicorn>=0.41.0",
    "websockets>=16.0",
]
